# onion-logger

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  logger_demo.cpp
onion/: Logger.cpp  Logger.hpp
